fix articles list on mobile

--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -117,5 +117,10 @@
     .media-carousel-item {
         padding: 20px;
     }
+    
+    .blog-posts {
+        display: flex;
+        flex-direction: column;
+    }
 
 }
